--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
+    "axios": "^1.6.8",
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^133.0.0",
     "react": "^18.2.0",
