--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "googleapis": "^133.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "use-google-sheets": "^2.0.0"
@@ -27,6 +28,7 @@
     "@types/node": "^20.11.18",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-gtm-module": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
