--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.6.8",
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^133.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
